fixing jquery sliders touch behavior on mobile devices.

--- a/App/App.Web/Content/css/garderob.css
+++ b/App/App.Web/Content/css/garderob.css
@@ -631,19 +631,30 @@ i.submit-loading {
 		position: absolute;
 		z-index: 2;
 		border-radius: 0;
-		width: 14px;
-		height: 14px;
+		width: 50px;
+		height: 50px;
 		border: 0px;
-		background-color: #237dc8;
+		background-color: rgba(35, 125, 200, 0);
 		margin-top: 0px;
 		margin-left: 0px;
-		top: -.3em;
+		top: -1.6em;
 	}
 
-	.slider-range-min .ui-slider-range {
-		background-color: #237dc8;
-		border: 0px;
-	}
+		.slider-range-min .ui-slider-handle::after {
+			content: '';
+			display: block;
+			width: 14px;
+			height: 14px;
+			background-color: #237dc8;
+			opacity: 1;
+			position: absolute;
+			top: 1.25em;
+		}
+		
+		.slider-range-min .ui-slider-range {
+			background-color: #237dc8;
+			border: 0px;
+		}
 
 .calculator-container .selection-box select {
 	background-color: white;
